--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             overflow-x: auto;
             white-space: pre-wrap;
             tab-size: 4;
+            height:100px;
         }
 
         .copy-button {
